# Zapret-Zen

./: .gitignore  LICENSE  README.md  _refresh_release.py  dev_run.bat  donations.md  fix_backend.py  pyproject.toml
.github/release-notes/: 1.4.1.md  1.4.2.md  1.4.4.md  1.4.5.md  2.0.0.md
.github/workflows/: ci.yml  release.yml
docs/: services.md
installer/: embedded_app_icon.py  install_zapretzen.py
packaging/: install_zapretzen.spec  zapret_zen.spec
runtime/tg-ws-proxy/utils/: update_check.py
sample_data/default_mods/unified-by-peshk0v/: general (ALT10.1).bat  general (ALT11.1).bat  general (ALT11.2).bat  general (ALT12.1).bat  general (ALT12.2).bat  general (ALT7.1).bat  general (ALT9.1).bat  metadata.json
scripts/: build_nuitka.ps1  build_nuitka_installer.ps1  normalize_themes.py  prepare_nuitka_release.py  theme_visual_check.py
src/zapret_hub/services/: backend_worker.py  components.py
src/zapret_hub/ui/: main_window.py
src/zapret_zen/: __init__.py  app.py  bootstrap.py  main.py  runtime_env.py  worker_entry.py  workers.py
src/zapret_zen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/zapret_zen/domain/: __init__.py  models.py
src/zapret_zen/services/: autostart.py  backend_worker.py  components.py  diagnostics.py  files.py  github_network.py  logging_service.py  merge.py  mods.py  notifications.py  profiles.py  (+5 more)
themes/: charcoal.json  cream.json  dark.json  deep_purple.json  forest_dark.json  lavender.json  light.json  light_blue.json  midnight_blue.json  mint.json  night.json  oled.json  peach.json
(+6 files in other folders)
